@@ -30,7 +30,7 @@ return {
 		mass = 2825,
 		maxdamage = 3880,
 		maxslope = 10,
-		maxvelocity = 1.2,
+		maxvelocity = 1.1,
 		maxwaterdepth = 12,
 		mobilestandorders = 1,
 		movementclass = "TANK4",
@@ -117,12 +117,12 @@ return {
 		weapondefs = {
 			missiles = {
 				accuracy = 1000,
-				areaofeffect = 256,
+				areaofeffect = 156,
 				avoidfeature = false,
 				burst = 2,
 				burstrate = 0.55,
 				cegtag = "arm_ban_rocket",
-				craterareaofeffect = 275,
+				craterareaofeffect = 156,
 				craterboost = 0,
 				cratermult = 0,
 				explosiongenerator = "custom:Explosion_Medium_Rocket",
@@ -133,7 +133,7 @@ return {
 				model = "weapon_rocketm",
 				name = "Heavy Rocket",
 				noselfdamage = true,
-				range = 1300,
+				range = 1200,
 				reloadtime = 8,
 				smoketrail = true,
 				soundhitdry = "tankahit",
